# ansible-pg

./: .gitignore  README.md  ansible.cfg.example  hosts.ini.example  pyproject.toml  requirements.txt
group_vars/pg_cluster/: pg_all.yaml.example  py3.yaml
group_vars/pg_single/: pg_all.yaml.example
playbooks/: citus.yaml  pg-ha-cluster.yaml  pgadmin4.sh  pgdump.yaml  pgsql.yaml
playbooks/citus/: README.md  citus.yaml
roles/cron/defaults/: main.yml
roles/cron/tasks/: main.yml
roles/cron/templates/: cron.j2  pg-backup.sh.j2
roles/etcd_cluster/defaults/: main.yml
roles/etcd_cluster/meta/: main.yml
roles/etcd_cluster/tasks/: main.yml
roles/etcd_cluster/templates/: etcds.conf.j2
roles/patroni/: README.md
roles/patroni-initdb/: README.md
roles/patroni-initdb/defaults/: main.yml
roles/patroni-initdb/handlers/: main.yml
roles/patroni-initdb/tasks/: main.yml
roles/patroni-initdb/vars/: main.yml
roles/patroni-wait/defaults/: main.yml
roles/patroni-wait/handlers/: main.yml
roles/patroni-wait/tasks/: main.yml
roles/patroni-wait/vars/: main.yml
roles/patroni/defaults/: main.yml
roles/pg-extension/: README.md
roles/pgbackrest/: README.md
roles/pgdog/: README.md
roles_init/logrotate/: README.md
roles_init/rsyslog/: README.md
roles_init/supervisor/: README.md
scripts/: citus-schema-test.py  citus-test.py  pgadmin4.sh  pgdog-test.py  pgmq-test.py  postgres_api_test.py  postgres_health_check.py  postgres_sub_pub_test.py
sql/: copy.sql  pg-kv-cache-json.sql  pg-kv-cache.sql  pg-tb-users.sql  pg.sql  status.sql  test.sql  vm.sql
(+55 files in other folders)
