[project]
name = "ansible-pg"
version = "0.1.0"
description = "Ansible playbooks for deploying PostgreSQL (Patroni HA cluster)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible==11.5.0",
    "ansible-core==2.18.8",
    "psycopg==3.3.2",
    "psycopg2-binary>=2.9.11",
    "pyyaml==6.0.2",
    "jinja2==3.1.6",
    "requests==2.32.5",
    "passlib==1.7.4",
    "cryptography==44.0.3",
]
